# bitcoin-kernel

./: .gitignore  CMakeLists.txt
cmake/: bitcoin-build-config.h.in  introspection.cmake
src/: CMakeLists.txt  coins.cpp  randomenv.cpp  signet.cpp  txmempool.cpp  validation.cpp
src/crypto/: CMakeLists.txt  chacha20.cpp  chacha20.h
src/interfaces/: chain.h
src/kernel/: CMakeLists.txt
src/node/: blockstorage.cpp
src/util/: check.cpp
